[gd_scene load_steps=8 format=2]

[ext_resource path="res://Engine/Hud/Ttf/aire_exterior/AireExterior.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Engine/MainScenes/StartMenu/OptionElement/OptionElement.tscn" type="PackedScene" id=2]
[ext_resource path="res://Engine/MainScenes/StartMenu/Screens/OptionsScreen/OptionsScreen.gd" type="Script" id=3]
[ext_resource path="res://Engine/MainScenes/StartMenu/ValueIndicator/ValueIndicator.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "start"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "stop"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4 ),
"transitions": PoolRealArray( 2, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_animation_end_stop"
} ]
}

[node name="OptionsScreen" type="Control" groups=[
"MENU_LISTENER",
]]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.1
anchor_right = 1.0
anchor_bottom = 0.2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "menu.options"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="."]
anchor_left = 0.35
anchor_top = 0.3
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputMap" parent="Options" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 665.0
margin_bottom = 37.0
text = "menu.input_map"
method_name = "menu_listener_on_inputmap_opened"

[node name="MusicVolume" parent="Options" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 41.0
margin_right = 665.0
margin_bottom = 78.0
text = "menu.music_volume"

[node name="MusicValueIndicator" parent="Options" instance=ExtResource( 7 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 82.0
margin_right = 665.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="SfxVolume" parent="Options" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 665.0
margin_bottom = 141.0
text = "menu.sfx_volume"

[node name="SfxValueIndicator" parent="Options" instance=ExtResource( 7 )]
anchor_top = 0.0
anchor_bottom = 0.0
margin_top = 145.0
margin_right = 665.0
margin_bottom = 163.0
size_flags_horizontal = 3

[node name="Back" parent="Options" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 167.0
margin_right = 665.0
margin_bottom = 204.0
text = "menu.back"
method_name = "menu_listener_on_options_closed"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 2 )
anims/stop = SubResource( 3 )

[connection signal="pressed" from="Options/InputMap" to="." method="_any_button_pressed"]
[connection signal="pressed" from="Options/MusicVolume" to="." method="_any_button_pressed"]
[connection signal="pressed" from="Options/SfxVolume" to="." method="_any_button_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_any_button_pressed"]
